SERVER-59346 Change to handle int128t cases for simple8b